# mu-cell

./: .gitignore  .gitmodules  INSTALL.md  README.md  install-mu-cell-sw.sh
.github/ISSUE_TEMPLATE/: bug_report.yml
hardware/: .gitignore  README.md
hardware/mu-cell-bb/: #auto_saved_files#  _autosave-mu-cell-bb.kicad_sch  changelog.md  fabrication-toolkit-options.json  fp-lib-table  mu-cell-bb.kicad_pcb  mu-cell-bb.kicad_prl  mu-cell-bb.kicad_pro  mu-cell-bb.kicad_sch  sym-lib-table  ~mu-cell-bb.kicad_sch.lck
hardware/mu-cell-bb/CAD/: mu-cell-bb_testbench-fixture.FCStd
hardware/mu-cell-bb/parts/: 2118707-4 CAN.kicad_mod  2118707-4-CAN.STEP  BATWIRELESS_BWSMA-KE-P001.kicad_mod  OLED_128x64_I2C.kicad_mod  QFN50P500X500X80-33N-D.kicad_mod  U.FL_Vertical_GND.kicad_mod  U.FL_Vertical_Passthrough.kicad_mod  ldk130m33r.bak  ldk130m33r.kicad_sym  parts.bak  parts.kicad_sym
hardware/mu-cell-bb/parts/3D/: SOT23-5L_1P75X3P05X0P95_STM.step
hardware/mu-cell-bb/parts/feet.pretty/: 2118707-4 CAN.kicad_mod  BATWIRELESS_BWSMA-KE-P001.kicad_mod  OLED_128x64_I2C.kicad_mod  Oscillator_SMD_ECS_2520MV-xxx-xx-4Pin_2.5x2.0mm.kicad_mod  QFN50P500X500X80-33N-D.kicad_mod  SOT23-5L_1P75X3P05X0P95_STM.kicad_mod  U.FL_Vertical_GND.kicad_mod  U.FL_Vertical_Passthrough.kicad_mod
hardware/mu-cell-bb/production/: designators.csv  netlist.ipc  positions.csv
hardware/mu-cell-bb/v1.0/production/: bom.csv
hardware/mu-cell-bb/v1.1/production/: bom.csv  designators.csv  netlist.ipc  positions.csv
hardware/mu-cell-bb/v1.2/production/: muCell_-_BB_v1.2_bom.csv  muCell_-_BB_v1.2_designators.csv  muCell_-_BB_v1.2_positions.csv  netlist.ipc
hardware/mu-cell-pa-mini/: uCell-pa-mini-schematic.drawio
sim/: README.md
sim/qucs/GRF5604_S3P/: GRF5604_DC2322_READ_ME.txt  GRF5604_DC2322_Vcc12_2p5v_225mA_Vbias5v_P1RFin_P2Vcc1_P3Vcc2_RFout.s3p  GRF5604_DC2322_Vcc12_3p0v_227mA_Vbias5v_P1RFin_P2Vcc1_P3Vcc2_RFout.s3p  GRF5604_DC2322_Vcc12_3p3v_230mA_Vbias5v_P1RFin_P2Vcc1_P3Vcc2_RFout.s3p  GRF5604_DC2322_Vcc12_3p6v_234mA_Vbias5v_P1RFin_P2Vcc1_P3Vcc2_RFout.s3p  GRF5604_DC2322_Vcc12_4p2v_238mA_Vbias5v_P1RFin_P2Vcc1_P3Vcc2_RFout.s3p  GRF5604_DC2322_Vcc12_4p6v_242mA_Vbias5v_P1RFin_P2Vcc1_P3Vcc2_RFout.s3p  GRF5604_DC2322_Vcc12_5p0v_246mA_Vbias5v_P1RFin_P2Vcc1_P3Vcc2_RFout.s3p  GRF5604_DC2322_Vcc12_5p5v_250mA_Vbias5v_P1RFin_P2Vcc1_P3Vcc2_RFout.s3p
sim/qucs/RX_front-end/: RX_Front-end.qucs.sch
sim/qucs/TX_Front-end/: TX_Front-end.qucs.sch
sim/qucs/Transmission_line/: TL_Sim.qucs.sch
sim/qucs/amp_qucs_test/: amp_qucs_test.qucs.net  amp_qucs_test.qucs.sch
sim/qucs/amp_rf_design/: amp_rf_design.qucs.sch
sim/qucs/stub_effect_test/: Stub.qucs.sch
sim/qucs/wilkinson_divider/: wilkinson_divider.qucs.sch
software/: README.md
software/SoapyMuCell/: CMakeLists.txt  README.md  SoapyMuCell.cpp  eeprom_auth.hpp  generate_keys.cmake  version.sh
software/raspberry-pi-drivers/: README.md
software/raspberry-pi-drivers/mu-cell-bb-dts/: Makefile  README.md  mu-cell-bb_raspberrypi.dts
software/raspberry-pi-drivers/mu-cell-bb-dts/signing/: yota_batch_public.pem
